--- a/css/common.css
+++ b/css/common.css
@@ -12,19 +12,19 @@
 header{
   position: fixed;
   width: 100%;
-  z-index: 99999;
-  padding-top: 20px;
+  height: 100%;
+  z-index: 20;
 }
-header:hover{
-  background-color: rgba(225, 225, 225, 0.8);
-  backdrop-filter: saturate(180%) blur(15px);
+nav:hover{
+  background-color: rgba(225, 225, 225, 0.3);
+  backdrop-filter: saturate(120%) blur(12px);
   height: 200px;
 }
-header:hover .depth2{
+nav:hover .depth2{
   opacity: 1;
   transition: 0.5s;
 }
-header:hover .gnb-line{
+nav:hover .gnb-line{
   opacity: 1;
   transition: 0.5s;
 }
@@ -33,7 +33,7 @@ header:hover .gnb-line{
   width: 100%;
   align-items: start;
   justify-content: space-between;
-  padding: 0 30px;
+  padding: 20px 30px 0 30px;
 }
 .depth1 a{
   font-weight: 900;
@@ -77,8 +77,11 @@ header:hover .gnb-line{
   text-align: center;
   line-height: 40px;
   position: absolute;
-  bottom: -650px;
-  right: 45px;
+  bottom: 5%;
+  right: 2%;
+  cursor: pointer;
+  background-color: rgba(225, 225, 225, 0.2);
+  backdrop-filter: saturate(180%) blur(5px);
 }
 
 /* 푸터 */
