--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,28 @@ html, body {height: 100%;}
   height: 100%;
   object-fit: cover;
 }
+.slide_txt{
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  transform: translateY(-50%);
+}
+.slide_txt_{
+  position: absolute;
+  top: 50%;
+  right: 20%;
+  text-align: right;
+  transform: translateY(-50%);
+}
+.visual h2{
+  font-size: 3vw;
+  padding: 20px 0;
+  color: #5a5a5a;
+}
+.visual b, .visual p{
+  font-size: 1.3vw;
+}
+
 
 
 /* 섹션공통*/
@@ -47,14 +69,6 @@ html, body {height: 100%;}
   height: 100%;
   object-fit: cover;
 }
-/* .sec01_img{
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-.sec01_img img{
-  position: absolute;
-} */
 
 .sec01_txt{
   margin-right: 200px;
@@ -92,29 +106,29 @@ html, body {height: 100%;}
 .review{
   width: 100%;
   height: 100%;
+  background-color: #f3f2ee;
+  box-shadow: 0 -5px 30px rgba(0, 0, 0, .2);
 }
 .sec04_wrap{
+  width: 70% !important;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  overflow: hidden;
+  margin: 0 auto;
 }
 .rv_wrap{
-  width: 70% !important;
   height: fit-content !important;
-  display: flex;
-  justify-content: space-between;
-  align-items: end;
   margin: 0 auto -400px auto;
-  overflow: hidden;
 }
 .rv_wrap .rv_box{
-  width: 23% !important;
+  width: 248px !important;
   height: 395px;
   display: flex;
-  flex-direction: column;
-  border: 1px solid #707070;
+  background-color: white;
+  margin-left: 20px;
 }
 .rv_wrap .rv_box a{
   width: 100%;
@@ -125,4 +139,23 @@ html, body {height: 100%;}
   width: 80%;
   height: 50%;
   margin-top: 10%;
+  object-fit: cover;
+}
+.rv_wrap .rv_box .rv_txt{
+  width: 80%;
+  height: 105px;
+  margin: 0 auto;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-word;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.rv_wrap .rv_box h4{
+  padding: 20px 0;
+}
+.rv_wrap .rv_box p{
+  text-overflow: ellipsis;
 }
