--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,7 @@ html, body {height: 100%;}
   padding-bottom: 0;
   background-size: cover;
   background-attachment: fixed;
+  box-shadow: 0 5px 30px rgba(0, 0, 0, .2) inset;
 }
 
 /* 섹션4 */
@@ -107,7 +108,7 @@ html, body {height: 100%;}
   width: 100%;
   height: 100%;
   background-color: #f3f2ee;
-  box-shadow: 0 -5px 30px rgba(0, 0, 0, .2);
+  /* box-shadow: 0 -5px 20px rgba(0, 0, 0, .2); */
 }
 .sec04_wrap{
   width: 70% !important;
